# rocket_classifier

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  colab_brute_force_optimization.py  colab_extended_lgbm_optuna.py  download_weights.py  experiment.py  export_fast_models.py  interpretation_report.txt  model.pkl  pyproject.toml  requirements.txt  ruff.toml  submission.csv  threshold_biases.npy  train_medians.npy  training_report.json
.github/: dependabot.yml
.github/workflows/: docker.yml  python-tests.yml  update-interpretability.yml
assets/: interpretation_report.txt
research/: colab_analysis.py  colab_bayes_error_proof.py  colab_brute_force_optimization.py  colab_extended_lgbm_optuna.py  colab_final_ceiling_breaker.py  colab_salvo_ceiling_attempt.py  colab_salvo_clustering.py  colab_sequence_model.py  colab_train.py  colab_transformer_model.py  interpret.py  train.py  visualize.py
rocket_classifier/: __init__.py  app.py  features.py  interpret.py  main.py  model.py  schema.py  visualize.py
scripts/: download_models.py  download_weights.py  export_fast_models.py
src/: app.py  features.py  interpret.py  main.py  model.py  schema.py  visualize.py
tests/: conftest.py  test_app.py  test_consensus.py  test_docs.py  test_features.py  test_main.py  test_model.py  test_schema.py
