[project]
name = "rocket-classifier"
version = "1.0.0"
description = "Production-grade rocket trajectory classifier"
authors = [{name = "Data Engineer"}]
requires-python = "==3.12.*"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "pyarrow>=14.0",
    "matplotlib>=3.7",
    "streamlit>=1.35",
    "plotly>=5.20",
    "shap>=0.44,<0.51",
    "pydantic>=2.12.5",
    "requests>=2.33.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "ruff>=0.15.7,<0.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rocket_classifier"]

[tool.pytest.ini_options]
testpaths = ["tests"]
