[project]
name = "rocket-classifier"
version = "1.0.0"
description = "Production-grade rocket trajectory classifier"
authors = [{name = "Ilya Novikov"}]
requires-python = "==3.12.*"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "joblib>=1.3",
    "pyarrow>=14.0",
    "streamlit>=1.35",
    "plotly>=5.20",
    "pydantic>=2.12.5",
    "requests>=2.33.0",
    "onnxruntime>=1.16",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "ruff>=0.15.7,<0.16.0",
]
research = [
    "matplotlib>=3.7",
    "shap>=0.44,<0.52",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rocket_classifier"]

[tool.pytest.ini_options]
testpaths = ["tests"]
