[project]
name = "rocket-classifier"
version = "1.0.0"
description = "Production-grade rocket trajectory classifier"
authors = [{name = "Ilya Novikov"}]
requires-python = "==3.12.*"
dependencies = [
    "pandas>=2.0,<3.0",
    "numpy>=1.24,<3.0",
    "scikit-learn>=1.3,<2.0",
    "lightgbm>=4.0,<5.0",
    "pyarrow>=14.0,<25.0",
    "streamlit>=1.35,<2.0",
    "plotly>=5.20,<7.0",
    "pydantic>=2.12.5,<3.0",
    "requests>=2.33.0,<3.0",
    "onnxruntime>=1.16,<2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "ruff>=0.15.7,<0.16.0",
    "onnxmltools>=1.10,<2.0",
]
research = [
    "matplotlib>=3.7,<4.0",
    "shap>=0.44,<0.52",
    "optuna>=3.0,<5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rocket_classifier"]

[tool.pytest.ini_options]
testpaths = ["tests"]
